<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Difficulty"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/grey">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_difficulty"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="22sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_beginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner" />
        <Button
            android:id="@+id/btn_intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intermediate" />
        <Button
            android:id="@+id/btn_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>