<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@color/broken_black">

    <TextView
        android:id="@+id/current_day_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_day"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/times_completed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/times_completed"
        android:textSize="20sp"
        android:textColor="@color/light_grey"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/time_spend_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_spend"
        android:textSize="20sp"
        android:textColor="@color/light_grey"
        android:layout_margin="5dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/quote_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:text="@string/quote_of_the_day"
            android:textColor="@color/broken_black"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.972"
            android:background="@color/grey"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>